<resources>
    <string name="app_name">Menu</string>
    <string name="length">Panjang</string>
    <string name="width">Lebar</string>
    <string name="height">Tinggi</string>
    <string name="btn_text_hitung">HITUNG</string>
    <string name="tv_hasil">HASIL</string>
    <string name="activity_title">Hitung Volume Prisma Segitiga</string>
    <string name="btn_text_reset">RESET</string>
    <string name="prisma_S3">Prisma Segitiga</string>
    <string name="btn_balok">Balok</string>
</resources>
